--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "Webapp for creating magic eye pictures",
   "license": "MIT",
-  "repository": { "type": "git", "url": "https://github.com/rjw57/magic-eye-generator" },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rjw57/stereogram"
+  },
   "author": {
     "name": "Rich Wareham",
     "email": "rich@richwareham.com",
@@ -16,6 +19,7 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-haml": "~0.8.0"
+    "grunt-haml": "~0.8.0",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
