--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ node_js:
   - '0.8'
   - '0.10'
 before_script:
+  - 'gem update --system'
+  - 'gem install compass'
   - 'npm install -g bower grunt-cli'
   - 'bower install'
